2006-09-08  Jakub Steiner <jimmac@ximian.com>

	* 24x24/actions/document-save:
	* 24x24/actions/document-save-as:
	* 24x24/devices/media-floppy: update to reflect recent changes by
		Lapo. (They were awesome :D)

2006-09-07  Jakub Steiner <jimmac@ximian.com>

	* scalable/categories/applications-games.svg: awesome shape updates by
		Lapo Calamandrei

2006-09-07  Jakub Steiner <jimmac@ximian.com>

	* {22x22,24x24}/categories/applications-games: usem more of the canvas.
		Spotted by Lapo.

2006-09-05  Rodney Dawes  <dobey@novell.com>

	* 24x24/apps/Makefile.am:
	* 24x24/apps/text-editor.png:
	Get rid of this old text-editor icon

	Fixes #354426

2006-09-05  Jakub Steiner <jimmac@ximian.com>

	* scalable/devices/audio-input-microphone.svg:
	  super-slick scalable icon from Lapo Calamandrei.

2006-09-05  Jakub Steiner <jimmac@ximian.com>

	* preferences-desktop-wallpaper: 
	* document-save, document-save-as: 
	* media-floppy: touch-ups by Lapo

2006-09-04  Rodney Dawes  <dobey@novell.com>

	* NEWS:
	* configure.in: Update for 2.16.0.1 "OH NO! ITALIANS!!" release

2006-09-04  Rodney Dawes  <dobey@novell.com>

	* */actions/Makefile.am:
	* */actions/system-lock-screen.*:
	Update system-lock-screen icons from Lapo Calamandrei

	Fixes #354257

2006-09-04  Rodney Dawes  <dobey@novell.com>

	* */apps/Makefile.am:
	* */apps/accessories-text-editor.*:
	Update accessories-text-editor icons from Lapo Calamandrei

	Fixes #354256

2006-09-04  Rodney Dawes  <dobey@novell.com>

	* 24x24/apps/utilities-terminal.png: Update to match 22x22 source

	Fixes #354279

2006-09-03  Rodney Dawes  <dobey@novell.com>

	* NEWS:
	* configure.in: Update for 2.16.0 release

2006-09-03  Rodney Dawes  <dobey@novell.com>

	* */actions/Makefile.am:
	* */actions/gtk-edit.*:
	Add in a new style gtk-edit icon from Lapo Calamandrei

2006-09-03  Rodney Dawes  <dobey@novell.com>

	* 22x22/devices/computer.xcf.bz2: Remove old computer icon source

	* 24x24/devices/Makefile.am: Install video-display.png (#354112)