@@ -1,3 +1,9 @@
+2006-11-13  Rodney Dawes  <dobey@novell.com>
+
+	* index.theme.in: Add scalable/actions to the theme
+
+	Fixes #355576
+
 2006-09-08  Jakub Steiner <jimmac@ximian.com>
 
 	* 24x24/actions/document-save:
